# CG_Editor

./: CMakeLists.txt  Readme.md
Editor/Headers/: Camera.h  HeightMap.h  Mesh.h  Model.h  Shader.h  glitter.hpp
Editor/Models/: Tree.mtl  campfire.mtl  lowpolytent.mtl  oakTree.mtl  pineTree.mtl
Editor/Shaders/: 1.model_loading.fs  heightmap.fs
Editor/Sources/: main.cpp
